# cloudmodel

./: .gitignore  AEREST.F  AERMED2.F  AEROANA.F  AEROANA.I  CANT01.I  CORAER.F  CORAER.I  CORREC01.F  CORREC02.F  CORRINU2.I  CORT3A2.F  CORT3A2X.F  CORT3A2Y.F  CORVAP.I  DAEROS.I  DGRANI.I  DIMEN.I  DIMLEE.I  DINAM70.F  DINAM71.F  DLLUVI.I  DNIEVE.I  DVAPOR.I  ESTAD01.I  FILTRO01.F  FILTRO01.I  FUVW.I  GRABA120.I  GRABA320.I  INICIO11.I  INICIO12.F  INOMO60.F  LEEAER.F  LLEHIE01.F  LLEHIE02.F  LMNCRI.I  LMNLLU.I  MANIFEST.in  MICROF05.F  (+77 more)
.github/workflows/: CI.yml  ford.yml
app/: AEREST.F  AEREST.f90  AERMED2.F  AERMED2.f90  AEROANA.F  AEROANA.f90  CORAER.F  CORAER.f90  CORT3A2X.F  CORT3A2X.f90  CORT3A2Y.F  CORT3A2Y.f90  LEEAER.F  LEEAER.f90  LLEHIE01.F  LLEHIE01.f90  LLEHIE02.F  LLEHIE02.f90  MODEL31.F  MODEL31.f90  PROAER.F  main.f90
doc/ford_site/: index.html  search.html
doc/ford_site/interface/: str.html
doc/ford_site/lists/: files.html  modules.html  procedures.html
doc/ford_site/module/: advecs.html  cant01.html  cloud_model.html  config.html  constants.html  coraer_vars.html  corgot_vars.html  corvap_vars.html  daeros_vars.html  dcrist_vars.html  dgotit_vars.html  dgrani_vars.html  dimensions.html  dimlee_vars.html  dinamic_var_perturbation.html  dlluvi_vars.html  dnieve_vars.html  dvapor_vars.html  extra_subrut.html  filtro01.html  initial_z_state.html  io.html  lmncri.html  lmngot.html  lmngra.html  lmnllu.html  lmnnie.html  microf05.html  microphysics.html  microphysics_perturbation.html  model_aux.html  model_initial_conditions.html  model_initialization.html  model_var.html  nuclea61.html  p3v3.html  sv_inhomogeneous_velocities_and_speed_pressure.html  tempe01.html  turbu1_vars.html  turbu2_vars.html  (+3 more)
doc/ford_site/proc/: cloud_movement.html  cloud_position.html  coraer.html  corcri.html  corgot.html  corgra.html  corllu.html  cornie.html  corvap.html  daeros.html  dcrist.html  dgotit.html  dgrani.html  dinamics.html  dlluvi.html  dnieve.html  dvapor.html  filtro.html  floor_and_ceiling_contour.html  floor_and_ceiling_contour_redefinition.html  floor_condition_redefinition.html  graba120.html  graba231.html  graba320.html  inhomogeneous_velocities.html  init_config.html  initial_conditions.html  initialize_model.html  lateral_contour.html  lateral_contour_redefinition.html  microfis.html  model.html  (+19 more)
include/: advecs.i  aeroana.i  cant01.i  const.i  coraer.i  corgot.i  corrinu2.i  corvap.i  daeros.i  dcrist.i  dgotit.i  dgrani.i  dimen.i  dimlee.i  dlluvi.i  dnieve.i  dvapor.i  estad01.i  estad02.i  estad03.i  estbas.i  filtro01.i  graba120.i  graba231.i  graba320.i  inicio11.i  inomo.i  lmncri.i  lmngot.i  lmngra.i  lmnllu.i  lmnnie.i  microf04.i  microf05.i  mode20.i  nuclea60.i  nuclea61.i  p3v3.i  perdim.i  permic.i  (+7 more)
interface/: Makefile  cloud_c_interface.f90  str.html
interphase/: Makefile  cloud_c_interphase.f90
lists/: files.html  modules.html  procedures.html
module/: advecs.html  cant01.html  cloud_model.html  config.html  constants.html  coraer_vars.html  corgot_vars.html  corvap_vars.html  daeros_vars.html  dcrist_vars.html  dgotit_vars.html  dgrani_vars.html  dimensions.html  dimlee_vars.html  dinamic_var_perturbation.html  dlluvi_vars.html  dnieve_vars.html  dvapor_vars.html  extra_subrut.html  filtro01.html  get_cut.html  graba.html  initial_z_state.html  io.html  lmncri.html  lmngot.html  lmngra.html  lmnllu.html  lmnnie.html  memory_managment.html  microf05.html  microphysics.html  microphysics_perturbation.html  model_aux.html  model_initial_conditions.html  model_initialization.html  model_var.html  nuclea61.html  p3v3.html  sv_inhomogeneous_velocities_and_speed_pressure.html  (+6 more)
nubepy/: Makefile  nube_c.f90
proc/: allocate_advecs.html  allocate_dinamic_var_perturbation.html  allocate_filtro01.html  allocate_initial_z_state.html  allocate_microphysics_perturbation.html  allocate_model.html  allocate_p3v3.html  allocate_sv_inhomogeneous_velocities_and_speed_pressure.html  allocate_turbvar1.html  cloud_movement.html  cloud_position.html  coraer.html  corcri.html  corgot.html  corgra.html  corllu.html  cornie.html  corvap.html  daeros.html  dcrist.html  deallocate_advecs.html  deallocate_dinamic_var_perturbation.html  deallocate_filtro01.html  deallocate_initial_z_state.html  deallocate_microphysics_perturbation.html  deallocate_model.html  deallocate_p3v3.html  deallocate_sv_inhomogeneous_velocities_and_speed_pressure.html  deallocate_turbvar1.html  dgotit.html  dgrani.html  dinamics.html  dlluvi.html  dnieve.html  dvapor.html  filtro.html  floor_and_ceiling_contour.html  floor_and_ceiling_contour_redefinition.html  floor_condition_redefinition.html  get_cutted.html  (+34 more)
python/: MANIFEST.in  README.md  __init__.py  main.py  meson.build  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
python/cloudmodel/: __init__.py  cloud_read.py  constants.py  z_profile.py
python/cloudmodel/interface/: Makefile  __init__.py  cloud_c_interface.f90
python/cloudmodel/tests/: __init__.py  test.py  test_cloud_read.py  tests.py
python/cloudmodel/tests/test_data/: ccc  est  esta  inic03.sa  inis.da  initial_z_arrays  posnub.sa  varconz.da
python/tests/: __init__.py  test.py
python/tests/test_data/: posnub.sa
sourcefile/: aux_subrut.f90.html  backup_record.f90.html  config.f90.html  constants.f90.html  cort3a2y.f90.html  graba.f90.html  initials.f90.html  microf05.f90.html  model.f90.html  model_aux.f90.html  shared_declarations.f90.html  text_handling.f90.html  var_dec.f90.html
src/: CORREC01.F  CORREC01.f90  DINAM70.F  DINAM70.f90  DINAM71.F  DINAM71.f90  FILTRO01.F  FILTRO01.f90  INICIO12.F  INICIO12.f90  INOMO60.F  INOMO60.f90  MICROF05.F  MICROF05.f90  MODEL31.f90  NUCLEA91.F  NUCLEA91.f90  TEMPE01.F  TEMPE01.f90  TURBUA01.F  TURBUA01.f90  TURBUB70.F  TURBUB70.f90  VELPRE01.F  VELPRE01.f90  advecs.f90  aux_subrut.f90  backup_record.f90  cant01.f90  config.f90  const.f90  constants.f90  cort3a2y.f90  dimen.f90  estbas.f90  graba.f90  graba320.f90  initials.f90  lmncri.f90  lmngot.f90  (+15 more)
tipuesearch/: tipuesearch_content.js
(+13 files in other folders)
