[build-system]
build-backend = "mesonpy"
requires = [ 
             "fpm",
             "meson-python>=0.15.0",
             "ninja", 
             "numpy",
             "setuptools",
             "wheel", 
             "matplotlib",
             "scipy", 
             "pandas"]

[project]
name = "cloudmodel"
version = "0.3.7"
authors = [{name = "Diego E. Oleiarz", email = "diego.oleiarz@mi.unc.edu.ar"}]
license = {text = "The MIT License"}
readme = "README.md"
description = "A simple, parameterized cloud model"
keywords = ["simulator", "cloud", "fortran", "python", "modeling"]
classifiers = [  
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy", "pandas", "scipy", "fpm", "matplotlib", "meson", "ninja"]
requires-python = '>=3.10, <3.13'

[project.urls]
Homepage = "https://github.com/Diegoolei/Fortran77-Cloud-Model"
Documentation = "https://diegoolei.github.io/Fortran77-Cloud-Model/"

[project.scripts]
cloudmodel = "cloudmodel.__main__:main"

[pydocstyle]
convention = "numpy"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "plot: marks tests as part of the integration with matplotlib slow (deselect with '-m \"not plots\"')",
    "model: marks tests as part model decomposition API (deselect with '-m \"not model\"')",
]
testpaths = [
    "tests",
]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["*-win32 *_i686"]